sre-instrumentation-challenge/deploy/kubernetes/storage-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: storage-api
  name: storage-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-api
  template:
    metadata:
      labels:
        app: storage-api
    spec:
      containers:
      - image: localhost:5000/storage-api:latest
        name: storage-api
        ports:
        - containerPort: 5000
