sre-instrumentation-challenge/deploy/kubernetes/storage-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: storage-api
  name: storage-api
spec:
  ports:
  - name: 5000-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: storage-api
  type: ClusterIP
