sre-instrumentation-challenge/deploy/kubernetes/storage-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-api
spec:
  rules:
  - host: storage-api.example.local
    http:
      paths:
      - backend:
          service:
            name: storage-api
            port:
              number: 5000
        path: /
        pathType: ImplementationSpecific
